# OpenSource

./: .appveyor.yml  .editorconfig  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  OpenSource.c  OpenSource.sln  OpenSource.vcxproj  OpenSource.vcxproj.filters  README.md  TODO  ahash.h  bsp.c  bsp.h  cache.c  cache.h  collection.c  collection.h  common.h  common.mk  common.props  compile.sh  dxt.c  filemap.c  filemap.h  hl2.cfg  hl2eps.cfg  libc.h  material.c  material.h  mempools.h  mount.sh  portal2.cfg  run-ep2.sh  run-hl1.sh  run-portal.sh  texture.c  (+3 more)
.github/workflows/: build.yml
OpenSource/: BSP.cpp  BSP.h  BSPAppDelegate.mm  CloudAtlas.cpp  CloudAtlas.h  Entity.cpp  Entity.h  Materializer.cpp  Materializer.h  OpenSource-Info.plist  OpenSource.cpp  OpenSource.h  OpenSource.vcxproj  OpenSource.vcxproj.filters  OpenSource.xib  ResRes.cpp  ResRes.h  VTF.cpp  VTF.h  main.m  main_win.cpp
OpenSource.xcodeproj/: project.pbxproj
OpenSource_mini/: main.cpp
assets/: lightmapped.frag  lightmapped.vert  unknown.frag  unknown.vert
misc/: hl1.bat  hl1.cfg  hl2.bat  hl2eps.bat  hl2eps.cfg  portal.bat  portal.cfg  rtbr.cfg  run-ep1.sh
src/: .ycm_extra_conf.py  BSP.cpp  BSP.h  BSPAppDelegate.h  BSPAppDelegate.mm  CloudAtlas.cpp  CloudAtlas.h  Entity.cpp  Materializer.cpp  OpenSource-Info.plist  OpenSource-Prefix.pch  OpenSource.c  OpenSource.cpp  OpenSource.h  OpenSource.vcxproj  ResRes.cpp  VTF.cpp  VTF.h  ahash.h  atlas.c  atlas.h  bsp.c  bsp.h  cache.c  cache.h  camera.c  camera.h  collection.c  collection.h  common.h  dxt.c  dxt.h  etcpack.c  etcpack.h  filemap.c  filemap.h  libc.h  log.c  log.h  m_unknown.frag  (+20 more)
